compiler/tests/success/subarrays/x86-64/reg_ptr_const.jazz
// sub-reg ptr with constant index

export fn main (reg ptr u32[2] r) -> reg u32 {
  reg ptr u32[1] r2;
  reg u32 res;

  r2 = r[1:1]; // LEA
  res = r2[0];

  return res;
}
