compiler/tests/fail/stack_allocation/x86-64/condition_move_ptr.jazz
export fn main (reg u64 x) -> reg u64 {
  reg ptr u64[1] r r1 r2;
  stack u64[1] s;
  s[0] = 0;
  r1 = s; r2 = s;
  r = (x==0) ? r1 : r2;
  reg u64 res = r[0];
  return res;
}
